# Boids_Dissertation

./: CMakeLists.txt  README.md  boidUpdate.c  boidUpdate.h  distributed_main.c  docker-compose.yml  dockerfile  k8s-deployment.yaml  local_main.c  messaging.c  messaging.h  wait-for-rabbitmq.sh
Final Model/: CMakeLists.txt  boidUpdate.c  boidUpdate.h  distributed_main.c  docker-compose.yml  dockerfile  k8s-deployment.yaml  local_main.c  messaging.c  messaging.h  run_limited.sh  wait-for-rabbitmq.sh
MatLab/: myInvSqrt.m  plotBoids.m  runBoids.m  simulateBoids.m  storeTerrainSample.m  terrainHeight.m  updateBoidState.m
